languages/EIPL/ANTLR/org/softlang/EiplCheckerParser.java
// Generated from org/softlang/EiplChecker.g4 by ANTLR 4.4

package org.softlang;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class EiplCheckerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__16=1, T__15=2, T__14=3, T__13=4, T__12=5, T__11=6, T__10=7, T__9=8, 
		T__8=9, T__7=10, T__6=11, T__5=12, T__4=13, T__3=14, T__2=15, T__1=16, 
		T__0=17, NAME=18, INTEGER=19, WS=20;
	public static final String[] tokenNames = {
		"<INVALID>", "'var'", "'write'", "'{'", "'while'", "';'", "'}'", "'='", 
		"'if'", "'call'", "'TODO'", "'else'", "'begin'", "'('", "'proc'", "'end'", 
		"')'", "'+'", "NAME", "INTEGER", "WS"
	};
	public static final int
		RULE_program = 0, RULE_scope = 1, RULE_decl = 2, RULE_stmt = 3, RULE_expr = 4;
	public static final String[] ruleNames = {
		"program", "scope", "decl", "stmt", "expr"
	};

	@Override
	public String getGrammarFileName() { return "EiplChecker.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	public boolean ok = true;
	public EiplEnv env = new EiplEnv();

	public EiplCheckerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(EiplCheckerParser.EOF, 0); }
		public ScopeContext scope() {
			return getRuleContext(ScopeContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EiplCheckerListener ) ((EiplCheckerListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EiplCheckerListener ) ((EiplCheckerListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(10); scope();
			setState(11); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScopeContext extends ParserRuleContext {
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public ScopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scope; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EiplCheckerListener ) ((EiplCheckerListener)listener).enterScope(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EiplCheckerListener ) ((EiplCheckerListener)listener).exitScope(this);
		}
	}

	public final ScopeContext scope() throws RecognitionException {
		ScopeContext _localctx = new ScopeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_scope);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 env.enterScope(); 
			setState(14); match(T__5);
			setState(18);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__16 || _la==T__3) {
				{
				{
				setState(15); decl();
				}
				}
				setState(20);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(21); stmt();
			setState(22); match(T__2);
			 env.exitScope(); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public Token NAME;
		public ExprContext expr;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode NAME() { return getToken(EiplCheckerParser.NAME, 0); }
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EiplCheckerListener ) ((EiplCheckerListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EiplCheckerListener ) ((EiplCheckerListener)listener).exitDecl(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_decl);
		try {
			setState(37);
			switch (_input.LA(1)) {
			case T__16:
				enterOuterAlt(_localctx, 1);
				{
				setState(25); match(T__16);
				setState(26); ((DeclContext)_localctx).NAME = match(NAME);
				setState(27); match(T__10);
				setState(28); ((DeclContext)_localctx).expr = expr(0);
				setState(29); match(T__12);

				        ok &= env.noClash((((DeclContext)_localctx).NAME!=null?((DeclContext)_localctx).NAME.getText():null));
				        env.addVar((((DeclContext)_localctx).NAME!=null?((DeclContext)_localctx).NAME.getText():null), ((DeclContext)_localctx).expr.type);
				      
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(32); match(T__3);
				setState(33); ((DeclContext)_localctx).NAME = match(NAME);
				setState(34); stmt();

				        ok &= env.noClash((((DeclContext)_localctx).NAME!=null?((DeclContext)_localctx).NAME.getText():null));
				        env.addProc((((DeclContext)_localctx).NAME!=null?((DeclContext)_localctx).NAME.getText():null));
				      
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public Token NAME;
		public ExprContext expr;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode NAME() { return getToken(EiplCheckerParser.NAME, 0); }
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public ScopeContext scope() {
			return getRuleContext(ScopeContext.class,0);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EiplCheckerListener ) ((EiplCheckerListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EiplCheckerListener ) ((EiplCheckerListener)listener).exitStmt(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stmt);
		int _la;
		try {
			setState(81);
			switch (_input.LA(1)) {
			case T__12:
				enterOuterAlt(_localctx, 1);
				{
				setState(39); match(T__12);
				}
				break;
			case NAME:
				enterOuterAlt(_localctx, 2);
				{
				setState(40); ((StmtContext)_localctx).NAME = match(NAME);
				setState(41); match(T__10);
				setState(42); ((StmtContext)_localctx).expr = expr(0);
				setState(43); match(T__12);

				        ok &= env.isVar((((StmtContext)_localctx).NAME!=null?((StmtContext)_localctx).NAME.getText():null))
				           && env.getType((((StmtContext)_localctx).NAME!=null?((StmtContext)_localctx).NAME.getText():null)) == ((StmtContext)_localctx).expr.type;
				      
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 3);
				{
				setState(46); match(T__8);
				setState(47); ((StmtContext)_localctx).NAME = match(NAME);
				setState(48); match(T__12);
				 ok &= env.isProc((((StmtContext)_localctx).NAME!=null?((StmtContext)_localctx).NAME.getText():null)); 
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 4);
				{
				setState(50); scope();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 5);
				{
				setState(51); match(T__9);
				setState(52); match(T__4);
				setState(53); ((StmtContext)_localctx).expr = expr(0);
				setState(54); match(T__1);
				setState(55); stmt();
				setState(58);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(56); match(T__6);
					setState(57); stmt();
					}
					break;
				}
				 ok &= ((StmtContext)_localctx).expr.type == EiplEnv.Type.BoolType; 
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 6);
				{
				setState(62); match(T__13);
				setState(63); match(T__4);
				setState(64); ((StmtContext)_localctx).expr = expr(0);
				setState(65); match(T__1);
				setState(66); stmt();
				 ok &= ((StmtContext)_localctx).expr.type == EiplEnv.Type.BoolType; 
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 7);
				{
				setState(69); match(T__14);
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__15) | (1L << T__14) | (1L << T__13) | (1L << T__12) | (1L << T__9) | (1L << T__8) | (1L << T__5) | (1L << NAME))) != 0)) {
					{
					{
					setState(70); stmt();
					}
					}
					setState(75);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(76); match(T__11);
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 8);
				{
				setState(77); match(T__15);
				setState(78); expr(0);
				setState(79); match(T__12);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public EiplEnv.Type type;
		public ExprContext expr1;
		public Token NAME;
		public ExprContext expr2;
		public TerminalNode INTEGER() { return getToken(EiplCheckerParser.INTEGER, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public TerminalNode NAME() { return getToken(EiplCheckerParser.NAME, 0); }
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EiplCheckerListener ) ((EiplCheckerListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EiplCheckerListener ) ((EiplCheckerListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			switch (_input.LA(1)) {
			case INTEGER:
				{
				setState(84); match(INTEGER);
				 ((ExprContext)_localctx).type =  EiplEnv.Type.IntType; 
				}
				break;
			case NAME:
				{
				setState(86); ((ExprContext)_localctx).NAME = match(NAME);

				        ok &= env.isVar((((ExprContext)_localctx).NAME!=null?((ExprContext)_localctx).NAME.getText():null));
				        ((ExprContext)_localctx).type =  env.getType((((ExprContext)_localctx).NAME!=null?((ExprContext)_localctx).NAME.getText():null));
				      
				}
				break;
			case T__7:
				{
				setState(88); match(T__7);
				 ((ExprContext)_localctx).type =  EiplEnv.Type.NoType; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(99);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ExprContext(_parentctx, _parentState);
					_localctx.expr1 = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_expr);
					setState(92);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(93); match(T__0);
					setState(94); ((ExprContext)_localctx).expr2 = expr(3);

					                  ok &= ((ExprContext)_localctx).expr1.type == EiplEnv.Type.IntType
					                     && ((ExprContext)_localctx).expr2.type == EiplEnv.Type.IntType;
					                  ((ExprContext)_localctx).type =  EiplEnv.Type.IntType;
					                
					}
					} 
				}
				setState(101);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
		case 4: return expr_sempred((ExprContext)_localctx, predIndex);
		}
		return true;
	}
	private boolean expr_sempred(ExprContext _localctx, int predIndex) {
		switch (predIndex) {
		case 0: return precpred(_ctx, 2);
		}
		return true;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}